crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__delete_column__tests__delete_column@delete_column_delete_column_mysql.snap
---
source: crates/vespertide-query/src/sql/delete_column.rs
expression: sql
---
ALTER TABLE `users` DROP COLUMN `email`
