crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__delete_column__tests__delete_column_with_fk_and_index_constraints@delete_column_with_fk_and_index_postgres.snap
---
source: crates/vespertide-query/src/sql/delete_column.rs
expression: sql
---
ALTER TABLE "orders" DROP COLUMN "user_id"
