crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__delete_column__tests__delete_column_with_fk_constraint@delete_column_with_fk_sqlite.snap
---
source: crates/vespertide-query/src/sql/delete_column.rs
expression: sql
---
CREATE TABLE "orders_temp" ( "id" integer, "total" integer );
INSERT INTO "orders_temp" ("id", "total") SELECT "id", "total" FROM "orders";
DROP TABLE "orders";
ALTER TABLE "orders_temp" RENAME TO "orders"
