crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__delete_column__tests__delete_column_with_index_constraint@delete_column_with_index_mysql.snap
---
source: crates/vespertide-query/src/sql/delete_column.rs
expression: sql
---
ALTER TABLE `posts` DROP COLUMN `created_at`
