crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__delete_column__tests__delete_column_with_index_constraint@delete_column_with_index_sqlite.snap
---
source: crates/vespertide-query/src/sql/delete_column.rs
expression: sql
---
DROP INDEX "ix_posts__created_at";
ALTER TABLE "posts" DROP COLUMN "created_at"
