crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__delete_column__tests__delete_column_with_pk_constraint@delete_column_with_pk_mysql.snap
---
source: crates/vespertide-query/src/sql/delete_column.rs
expression: sql
---
ALTER TABLE `order_items` DROP COLUMN `product_id`
