crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__delete_column__tests__delete_column_with_pk_constraint@delete_column_with_pk_sqlite.snap
---
source: crates/vespertide-query/src/sql/delete_column.rs
expression: sql
---
CREATE TABLE "order_items_temp" ( "order_id" integer, "quantity" integer );
INSERT INTO "order_items_temp" ("order_id", "quantity") SELECT "order_id", "quantity" FROM "order_items";
DROP TABLE "order_items";
ALTER TABLE "order_items_temp" RENAME TO "order_items"
